Fixed Myth post, changed email to @andrel.me, fixed About padding on mobile

--- a/app/_scss/app.sass
+++ b/app/_scss/app.sass
@@ -90,9 +90,12 @@ body
 				padding: rem(30) 0
 				width: 100%
 			@media (max-width: rem($phone-landscape))
+				padding: 0 2%
 			@media (max-width: rem($phone-portrait))
+				padding: 0 2%
 			@media (-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi)
 				width: 100%
+				padding: 0 2%
 
 
 
